tests/spec/emit/snapshots/propagate_on_an_option_local_in_a_try_block_returns_it.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn main() {
    let opt: Option<int> = Some(4)
    let doubled = try {
      let v = opt?
      v * 2
    }
    let _ = doubled
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func main() {
	opt := lisette.MakeOptionSome(4)
	doubled := func() lisette.Option[int] {
		if opt.Tag != lisette.OptionSome {
			return opt
		}
		v := opt.SomeVal
		return lisette.MakeOptionSome[int](v * 2)
	}()
	_ = doubled
}
