tests/spec/emit/snapshots/propagate_on_find_runs_the_loop.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn first_big(xs: Slice<int>) -> Option<int> {
    let x = xs.find(|x| x > 2)?
    Some(x)
  }
  
  fn main() {
    let _ = first_big([1, 2, 3])
  }
---
package main

func firstBig(xs []int) (int, bool) {
	var x int
	found := false
	for _, x_1 := range xs {
		if x_1 > 2 {
			x = x_1
			found = true
			break
		}
	}
	if !found {
		return 0, false
	}
	return x, true
}

func main() {
	firstBig([]int{1, 2, 3})
}
