tests/spec/emit/snapshots/propagate_on_result_variable.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test() -> Result<int, string> {
    let r: Result<int, string> = Ok(42);
    let x = r?;
    Ok(x + 1)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() lisette.Result[int, string] {
	r := lisette.MakeResultOk[int, string](42)
	if r.Tag != lisette.ResultOk {
		return r
	}
	x := r.OkVal
	return lisette.MakeResultOk[int, string](x + 1)
}
